docs/0.17/_sources/modeling/gallery/index.rst.txt
:orphan:



.. _sphx_glr_modeling_gallery:

.. _model-gallery:

Model gallery
=============

In general the models are grouped into the following categories:

- `~gammapy.modeling.models.SpectralModel`: models to describe spectral shapes of sources
- `~gammapy.modeling.models.SpatialModel`: models to describe spatial shapes (morphologies) of sources
- `~gammapy.modeling.models.TemporalModel`: models to describe temporal flux evolution of sources, such as light and phase curves
- `~gammapy.modeling.models.SkyModel` and `~gammapy.modeling.models.SkyDiffuseCube`: model to combine the spectral and spatial model components

The models follow a naming scheme which contains the category as a suffix to the class
name.

The model gallery provides a visual overview of the available models in Gammapy.


.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_modeling_gallery_spatial:

.. _spatial_models_gallery:

Spatial Models
--------------


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model is a spatially constant model.">

.. only:: html

 .. figure:: /modeling/gallery/spatial/images/thumb/sphx_glr_plot_constant_thumb.png

     :ref:`sphx_glr_modeling_gallery_spatial_plot_constant.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spatial/plot_constant

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a spatial model parametrising a disk.">

.. only:: html

 .. figure:: /modeling/gallery/spatial/images/thumb/sphx_glr_plot_disk_thumb.png

     :ref:`sphx_glr_modeling_gallery_spatial_plot_disk.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spatial/plot_disk

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a spatial model parametrising a Gaussian function.">

.. only:: html

 .. figure:: /modeling/gallery/spatial/images/thumb/sphx_glr_plot_gauss_thumb.png

     :ref:`sphx_glr_modeling_gallery_spatial_plot_gauss.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spatial/plot_gauss

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model is a delta function centered in *lon_0* and *lat_0* parameters provided:">

.. only:: html

 .. figure:: /modeling/gallery/spatial/images/thumb/sphx_glr_plot_point_thumb.png

     :ref:`sphx_glr_modeling_gallery_spatial_plot_point.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spatial/plot_point

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a spatial model parametrizing a projected radiating shell.">

.. only:: html

 .. figure:: /modeling/gallery/spatial/images/thumb/sphx_glr_plot_shell_thumb.png

     :ref:`sphx_glr_modeling_gallery_spatial_plot_shell.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spatial/plot_shell

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a spatial model based on a 2D sky map provided as a template.">

.. only:: html

 .. figure:: /modeling/gallery/spatial/images/thumb/sphx_glr_plot_template_thumb.png

     :ref:`sphx_glr_modeling_gallery_spatial_plot_template.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spatial/plot_template
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_modeling_gallery_spectral:

.. _spectral_models_gallery:

Spectral Models
---------------


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model evaluates absorbed spectral model.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_absorbed_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_absorbed.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_absorbed

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model represents EBL absorption models.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_absorption_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_absorption.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_absorption

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model is formed by the arithmetic combination of any two other spectral models.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_compound_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_compound.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_compound

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model takes a constant value along the spectral range.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_constant_spectral_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_constant_spectral.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_constant_spectral

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a cutoff power law spectrum.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_exp_cutoff_powerlaw_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_exp_cutoff_powerlaw.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_exp_cutoff_powerlaw

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a cutoff power law spectrum used for 3FGL.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_exp_cutoff_powerlaw_3fgl_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_exp_cutoff_powerlaw_3fgl.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_exp_cutoff_powerlaw_3fgl

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a gaussian spectrum.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_gauss_spectral_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_gauss_spectral.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_gauss_spectral

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a log parabola spectrum.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_logparabola_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_logparabola.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_logparabola

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This class provides an interface with the models defined in the naima models module.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_naima_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_naima.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_naima

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a power law spectrum.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_powerlaw_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_powerlaw.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_powerlaw

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a power law spectrum with integral as amplitude parameter.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_powerlaw2_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_powerlaw2.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_powerlaw2

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a smooth broken power law spectrum.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_smooth_broken_powerlaw_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_smooth_broken_powerlaw.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_smooth_broken_powerlaw

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises super exponential cutoff power-law model spectrum used for 3FGL.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_super_exp_cutoff_powerlaw_3fgl_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_super_exp_cutoff_powerlaw_3fgl.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_super_exp_cutoff_powerlaw_3fgl

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises super exponential cutoff power-law model spectrum used for 4FGL.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_super_exp_cutoff_powerlaw_4fgl_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_super_exp_cutoff_powerlaw_4fgl.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_super_exp_cutoff_powerlaw_4fgl

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model is defined by custom tabular values.">

.. only:: html

 .. figure:: /modeling/gallery/spectral/images/thumb/sphx_glr_plot_template_spectral_thumb.png

     :ref:`sphx_glr_modeling_gallery_spectral_plot_template_spectral.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /modeling/gallery/spectral/plot_template_spectral
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
